--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "IndyMandiReactNativeApp",
-  "displayName": "IndyMandiReactNativeApp"
+  "name": "IndyMandi",
+  "displayName": "Indy Mandi"
 }
