--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IndyMandiReactNativeApp",
+  "name": "indy_mandi",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean:android": "cd android && ./gradlew clean && cd ../",
+    "clean:ios": "cd ios && xcodebuild clean && cd ../",
+    "build:android": "cd android && ./gradlew assembleDebug && cd ..",
+    "release:android": "cd android && ./gradlew assembleRelease && cd ..",
+    "bundle:android": "cd android && ./gradlew bundleRelease && cd ..",
+    "resource:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
+ 
   },
   "dependencies": {
     "react": "18.1.0",
