--- a/package.json
+++ b/package.json
@@ -14,11 +14,31 @@
     "release:android": "cd android && ./gradlew assembleRelease && cd ..",
     "bundle:android": "cd android && ./gradlew bundleRelease && cd ..",
     "resource:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
- 
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native/normalize-color": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.10",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "^6.3.10",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "^3.3.4",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
