--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.70.6",
     "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
