--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.2.2",
+    "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
@@ -42,7 +44,10 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.4",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
