--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-collapsible": "^1.6.0",
+    "react-native-device-info": "^10.4.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.2",
