--- a/ios/IndyMandiReactNativeApp/Info.plist
+++ b/ios/IndyMandiReactNativeApp/Info.plist
@@ -20,6 +20,12 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Indy Mandi will acess to your gallery images</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Indy Mandi allow users to take pictures</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Indy Mandi allow users to record voice</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
