--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,6 +46,10 @@ allprojects {
             }
         }
         google()
-        maven { url 'https://www.jitpack.io' }
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+
+        // ADD THIS
+        maven { url "https://www.jitpack.io" }
     }
 }
