--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-device-info": "^10.4.0",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-image-picker": "^5.1.0",
+    "react-native-image-crop-picker": "0.38.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
