--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-actions-sheet": "^0.8.29",
     "react-native-device-info": "^10.4.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "0.38.1",
