--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.2.2",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "18.1.0",
@@ -42,6 +43,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
