--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "0.38.1",
     "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
@@ -49,6 +50,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-toast-message": "^2.1.6",
+    "react-native-video": "^6.0.0-alpha.6",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
