--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "resource:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
+    "@pusher/pusher-websocket-react-native": "^1.2.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/netinfo": "^9.3.7",
