--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,8 @@
 # Project-wide Gradle settings.
-
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=indymandi123
+MYAPP_UPLOAD_KEY_PASSWORD=indymandi123
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
