--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native/normalize-color": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-bottom-tabs": "^6.2.10",
