--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         compileSdkVersion = 33
         targetSdkVersion = 33
         googlePlayServicesAuthVersion = "19.2.0" // <--- use this version or newer
+         // Only using Android Support libraries
+        androidXAnnotation = "1.2.0"
+        androidXBrowser = "1.3.0"
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
