--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-crop-picker": "0.38.1",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal": "^13.0.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "^6.1.2",
@@ -46,6 +47,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-share": "^9.0.2",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.1",
