--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "^6.1.2",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
