--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,9 @@ platform :ios, '13'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'IndyMandiReactNativeApp' do
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -21,10 +24,14 @@ target 'IndyMandiReactNativeApp' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => FlipperConfiguration.enabled,
+    # :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
+
 
   target 'IndyMandiReactNativeAppTests' do
     inherit! :complete
